added css and baby graphics, worked on resoinsiveness

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body ng-controller="lab12Ctrl">
   <div class="container1">
 <img class="image-header" src="https://s-media-cache-ak0.pinimg.com/originals/24/6b/c2/246bc2d7d9c07ee2073637b38542316b.png" alt="">
+<img class="image-header2" src="https://s-media-cache-ak0.pinimg.com/originals/24/6b/c2/246bc2d7d9c07ee2073637b38542316b.png" alt="">
+
     <h1>Your Top 10 Baby Names 2016</h1>
-    <img class="image-header" src="https://s-media-cache-ak0.pinimg.com/originals/24/6b/c2/246bc2d7d9c07ee2073637b38542316b.png" alt="">
+
+
 
   </div>
   <div class="container2">
